Fix sponsor image on IE

--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -139,6 +139,7 @@
           .sponsor-image
             display: inline-block
             vertical-align: middle
+            width: 100%
 
     .gold-section
       margin-bottom: 30px
@@ -360,6 +361,7 @@
           margin-bottom: 15px
           .link
             .sponsor-image
+              width: auto
               height: 60px
               &.gold2
                 height: 40px
